--- a/Book_Files/osemosys_notebook_version.ipynb
+++ b/Book_Files/osemosys_notebook_version.ipynb
@@ -1,12 +1,37 @@
 {
   "cells": [
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# IESVic OSeMOSYS Notebook\n",
+        "\n",
+        "## Table of Contents\n",
+        "\n",
+        "1. [Introduction](#introduction)\n",
+        "2. [Important Information for Exercises](#important-information-for-exercises)\n",
+        "3. [Initializations](#initializations)\n",
+        "4. [Solving the Model](#solving-the-model)\n",
+        "5. [Visualizing Results](#visualizing-results)\n",
+        "6. [Exercise](#exercise)\n",
+        "\n",
+        "   6.1 [Instructor Controls](#for-the-instructor)\n",
+        "   \n",
+        "   6.2 [Student Area](#for-the-students)\n",
+        "\n",
+        "\n",
+        "------------------------------------------------------------------------"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7TiPJf2USZyD"
       },
       "source": [
-        "# IESVic OSeMOSYS Notebook\n",
+        "# Introduction\n",
         "\n",
         "This notebook contains the OSeMOSYS framework for energy modelling with an implementation in Python, using the Pyomo module. This Jupyter file is best run using Google Colab. The flowchart below contains the workflow for this notebook.\n",
         "\n",
@@ -96,8 +121,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "ON1R_Zd8SZyI"
+        "id": "ON1R_Zd8SZyI",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -123,12 +148,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rUVMkfjvSZyL"
       },
       "source": [
-        "# Important for Google Colab users\n",
+        "# Important Information for Exercises\n",
         "\n",
         "If the notebook is being executed in exercise mode, you might need to re-run the initialization of a few parameters. This happens because, while Pyomo allows us to set some of the parameters as \"mutable\" to be changed in real time with the previous solution of the model still stored in memory, other parameters cannot be set as mutable if the constraints in which they are envolved are of a boolean nature.\n",
         "A boolean constraint is one where the condition for the model remain within that boundary is of True vs False nature. This is not always the case, since in some occasion, it may be that the constraint is only assessing if a particular value is contained within numerical boundaries, and not necessarely if a condition is true, or not.\n",
@@ -140,10 +166,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "iLPwq9_zSZyN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "iLPwq9_zSZyN",
         "outputId": "2fd434c4-45d2-4581-ed1d-450418df2518"
       },
       "outputs": [
@@ -195,12 +221,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Initializations"
-      ],
       "metadata": {
         "id": "NLboAAnoVSEQ"
-      }
+      },
+      "source": [
+        "# Initializations"
+      ]
     },
     {
       "cell_type": "code",
@@ -1140,16 +1166,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5ZiYB79fSZyZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "5ZiYB79fSZyZ",
         "outputId": "5e033577-9e0a-49e4-f460-215ccd48e8e3"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Welcome to the CBC MILP Solver \n",
             "Version: 2.10.8 \n",
@@ -1246,16 +1272,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bdbHFT84SZya",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
         },
+        "id": "bdbHFT84SZya",
         "outputId": "30923f8e-d6c9-41b1-bc20-20685daf4439"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -1291,7 +1316,8 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -1365,12 +1391,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Exercise\n"
-      ],
       "metadata": {
         "id": "ZSGtFM5GTtSU"
-      }
+      },
+      "source": [
+        "# Exercise\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1436,16 +1462,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PF9DmVEFSZyd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "PF9DmVEFSZyd",
         "outputId": "1012563c-9e28-4200-9667-0eef3a8c848d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "############################################################################################################################################################################################################################################################################################################\n",
             "############################################################################################################################################################################################################################################################################################################\n",
@@ -1545,16 +1571,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "pJLf5xHESZye",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "pJLf5xHESZye",
         "outputId": "c345a087-6592-4797-958c-b06bf20f1397"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Welcome to the CBC MILP Solver \n",
             "Version: 2.10.8 \n",
@@ -1637,6 +1663,15 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "7TiPJf2USZyD",
+        "NLboAAnoVSEQ",
+        "jvKcBVVbSZyY",
+        "xmAXk3GfSZyd"
+      ],
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "IESVic_Python",
       "language": "python",
@@ -1654,16 +1689,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.7.13"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "7TiPJf2USZyD",
-        "NLboAAnoVSEQ",
-        "jvKcBVVbSZyY",
-        "xmAXk3GfSZyd"
-      ]
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
